<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/search"
            android:title="@string/search"
            android:icon="@drawable/ic_baseline_search"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/cast"
            android:title="@string/cast"
            android:icon="@drawable/ic_cast"
            app:showAsAction="ifRoom"
            />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Red"
            android:title="@string/red"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/Blue"
            android:title="@string/blue"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/Green"
            android:title="@string/green"
            app:showAsAction="never"
            />
    </group>
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/Settings"
            android:title="@string/setting"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/Exit"
            android:title="@string/exit"
            app:showAsAction="ifRoom"
            />
    </group>
</menu>