<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/copy"
            android:title="@string/copy"
            android:icon="@drawable/ic_baseline_content_copy"
            app:showAsAction="ifRoom"
            />

        <item
            android:id="@+id/paste"
            android:title="@string/paste"
            android:icon="@drawable/ic_baseline_content_paste_"
            app:showAsAction="ifRoom"
            />
        <item
            android:id="@+id/delete"
            android:title="@string/delete"
            android:icon="@drawable/ic_baseline_delete_24"
            app:showAsAction="ifRoom"
            />
    </group>

</menu>